// Code generated by skv2. DO NOT EDIT.

syntax = "proto3";
package fed.rpc.solo.io;
option go_package = "github.com/solo-io/solo-projects/projects/apiserver/pkg/api/fed.rpc/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
import "github.com/solo-io/solo-apis/api/gloo/gloo/v1/upstream.proto";

import "github.com/solo-io/solo-apis/api/gloo/gloo/v1/settings.proto";
import "github.com/solo-io/solo-apis/api/gloo/gloo/v1/proxy.proto";
import "github.com/solo-io/skv2/api/core/v1/core.proto";
import "github.com/solo-io/solo-projects/projects/apiserver/api/fed.rpc/v1/common.proto";

message Upstream {
    fed.rpc.solo.io.ObjectMeta metadata = 1;
    gloo.solo.io.UpstreamSpec spec = 2;
    gloo.solo.io.UpstreamStatus status = 3;
    core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message UpstreamGroup {
    fed.rpc.solo.io.ObjectMeta metadata = 1;
    gloo.solo.io.UpstreamGroupSpec spec = 2;
    gloo.solo.io.UpstreamGroupStatus status = 3;
    core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message Settings {
    fed.rpc.solo.io.ObjectMeta metadata = 1;
    gloo.solo.io.SettingsSpec spec = 2;
    gloo.solo.io.SettingsStatus status = 3;
    core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message Proxy {
    fed.rpc.solo.io.ObjectMeta metadata = 1;
    gloo.solo.io.ProxySpec spec = 2;
    gloo.solo.io.ProxyStatus status = 3;
    core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message ListUpstreamsRequest {
    core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
}

message ListUpstreamsResponse {
    repeated Upstream upstreams = 1;
}

message GetUpstreamYamlRequest {
    core.skv2.solo.io.ClusterObjectRef upstream_ref = 1;
}

message GetUpstreamYamlResponse {
    fed.rpc.solo.io.ResourceYaml yaml_data = 1;
}

message ListUpstreamGroupsRequest {
    core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
}

message ListUpstreamGroupsResponse {
    repeated UpstreamGroup upstream_groups = 1;
}

message GetUpstreamGroupYamlRequest {
    core.skv2.solo.io.ClusterObjectRef upstream_group_ref = 1;
}

message GetUpstreamGroupYamlResponse {
    fed.rpc.solo.io.ResourceYaml yaml_data = 1;
}

message ListSettingsRequest {
    core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
}

message ListSettingsResponse {
    repeated Settings settings = 1;
}

message GetSettingsYamlRequest {
    core.skv2.solo.io.ClusterObjectRef settings_ref = 1;
}

message GetSettingsYamlResponse {
    fed.rpc.solo.io.ResourceYaml yaml_data = 1;
}

message ListProxiesRequest {
    core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
}

message ListProxiesResponse {
    repeated Proxy proxies = 1;
}

message GetProxyYamlRequest {
    core.skv2.solo.io.ClusterObjectRef proxy_ref = 1;
}

message GetProxyYamlResponse {
    fed.rpc.solo.io.ResourceYaml yaml_data = 1;
}

service GlooResourceApi {

    rpc ListUpstreams (ListUpstreamsRequest) returns (ListUpstreamsResponse) {}
    rpc GetUpstreamYaml (GetUpstreamYamlRequest) returns (GetUpstreamYamlResponse) {}

    rpc ListUpstreamGroups (ListUpstreamGroupsRequest) returns (ListUpstreamGroupsResponse) {}
    rpc GetUpstreamGroupYaml (GetUpstreamGroupYamlRequest) returns (GetUpstreamGroupYamlResponse) {}

    rpc ListSettings (ListSettingsRequest) returns (ListSettingsResponse) {}
    rpc GetSettingsYaml (GetSettingsYamlRequest) returns (GetSettingsYamlResponse) {}

    rpc ListProxies (ListProxiesRequest) returns (ListProxiesResponse) {}
    rpc GetProxyYaml (GetProxyYamlRequest) returns (GetProxyYamlResponse) {}
}