syntax = "proto3";
package ratelimit.plugins.gloo.solo.io;
option go_package = "github.com/solo-io/solo-projects/projects/gloo/pkg/api/v1/plugins/ratelimit";

import "github.com/solo-io/solo-kit/api/v1/ref.proto";
import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

message RateLimit {
    enum Unit {
        UNKNOWN = 0;
        SECOND = 1;
        MINUTE = 2;
        HOUR = 3;
        DAY = 4;
    }
    Unit unit = 1;
    uint32 requests_per_unit = 2;
}

message IngressRateLimit {
    RateLimit authorized_limits = 1;
    RateLimit anonymous_limits = 2;
}

message Settings { 
    core.solo.io.ResourceRef ratelimit_server_ref = 1; 
}
